# simulib

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.en.md  README.md  fiber.cpp  result.xml  test.cpp  tools.cpp
docs/: Conventions.md  Notes.md  SimuLib Coding Style.md  includes.md  src.md
example/: CMakeLists.txt  Example.cpp  ExampleEye.cpp  EyeExample.cpp  FinalExample.cpp  SwitchExample.cpp  TestExample.cpp  example11.cpp  myExample.m
files/: field.txt  iricmat.txt  patX.txt  patY.txt
includes/: Internal  SimuLib  common_types.h  deprecated.h  fiber_tools.h  fiber_types.h  globals.h  simulib  tools.h
includes/src/: CommonTypes.h  CommonTypes.hpp  CustomDataStructure.hpp  DSPTools.hpp  DecimalToBinary.h  Deprecated.hpp  DigitalModulator.h  DigitalModulator.hpp  ElectricAmplifier.hpp  EvaluateEye.hpp  ExposedFunctions.hpp  ExternalFunctions.hpp  FFT.hpp  Fiber.h  Fiber.hpp  Globals.hpp  IQModulator.h  LaserSource.h  LaserSource.hpp  MathOperations.hpp  MatrixOperations.hpp  MatrixTools.h  Mzmodulator.hpp  OperatorOverloading.hpp  Pattern.h  Pattern.hpp  PolarizationBeamCombiner.h  PolarizationBeamSplitter.h  RxFrontend.h  RxFrontend.hpp  Tools.hpp  common_types.h  dsp_tools.h  fft.h  fiber_tools.h  fiber_types.h  func.h  globals.h  laser_source.h  matrix_tools.h  (+2 more)
includes/src/Eigen/: Cholesky  CholmodSupport  Core  Eigenvalues  Geometry  Householder  IterativeLinearSolvers  Jacobi  KLUSupport  LU  MetisSupport  OrderingMethods  PaStiXSupport  PardisoSupport  QR  SPQRSupport  SVD  SparseCholesky  SparseCore  SparseLU  SparseQR  StdDeque  StdList  StdVector  SuperLUSupport  UmfPackSupport
includes/src/Eigen/src/Core/: ArrayBase.h  DenseBase.h  GeneralProduct.h  Matrix.h  MatrixBase.h  StableNorm.h
includes/src/Eigen/src/Core/arch/Default/: GenericPacketMathFunctions.h
includes/src/Eigen/src/Geometry/: Quaternion.h
includes/src/Eigen/src/Householder/: HouseholderSequence.h
includes/src/Eigen/src/SparseCore/: SparseMatrixBase.h
includes/src/gpu/: CuFFT.cuh  Tools.cuh
includes/src/parmat/: BasicInfo.hpp  FunctionsComplex.hpp  FunctionsDouble.hpp  MatrixComplex.hpp  MatrixDouble.hpp
matlab-scripts/: ElectricAmplifier.m  Example.m  EyeExample.m
src/: CMakeLists.txt  DigitalModulator.cpp  EvaluateEye.cpp  FFT.cpp  Fiber.cpp  InitGstate.cpp  LaserSource.cpp  MathOperations.cpp  MatrixOperations.cpp  Mzmodulator.cpp  Pattern.cpp  RxFrontend.cpp  Tools.cpp  digital_mod.cpp  fft.cpp  fiber.cpp  globals.cpp  init_gstate.cpp  laser_source.cpp  lasersource.cpp  matrix_tools.cpp  mkl_test.cpp  mzmodulator.cpp  pat2samp.cpp  pattern.cpp  test.cpp  tools.cpp
src/gpu/: CMakeLists.txt  CuFFT.cu  Tools.cu
src/simulib/: CMakeLists.txt  DecimalToBinary.cpp  DigitalModulator.cpp  ElectricAmplifier.cpp  EvaluateEye.cpp  FFT.cpp  Fiber.cpp  Globals.cpp  IQModulator.cpp  InitGstate.cpp  LaserSource.cpp  MatrixOperations.cpp  Mzmodulator.cpp  Pat2Samp.cpp  Pattern.cpp  PolarizationBeamCombiner.cpp  PolarizationBeamSplitter.cpp  RxFrontend.cpp  Tools.cpp
test/: CMakeLists.txt  EigenTest.cpp  FFTTest.cpp  FiberTest.cpp  MKLTest.cpp  MKLTest2.cpp  MatlabTest.cpp  MzmodTest.cpp  ParMatTest.cpp  Test.cpp  fiber_test.cpp  mkl_test.cpp  mkl_test2.cpp  test.cpp
