add_executable(Test Test.cpp)
add_executable(MatlabTest MatlabTest.cpp)
add_executable(EigenTest EigenTest.cpp)
add_executable(MKLTest MKLTest.cpp)
add_executable(FiberTest FiberTest.cpp)
add_executable(MzmodTest MzmodTest.cpp)

set(SIMULIB_TEST_TARGETS "")
list(APPEND SIMULIB_TEST_TARGETS Test MatlabTest EigenTest MKLTest FiberTest MzmodTest)

if (LIBRARY)
    foreach (target IN LISTS SIMULIB_TEST_TARGETS)
        target_link_libraries(${target} ${LIBS})
    endforeach ()
else ()
    message(WARNING "Library not found, please build Library target manually.")
endif ()

# Find Matlab library on personal computer
find_package(Matlab)
if (Matlab_FOUND)
    include_directories(${Matlab_INCLUDE_DIRS})
    target_link_libraries(MatlabTest ${Matlab_ENGINE_LIBRARY} ${Matlab_DATAARRAY_LIBRARY})
else ()
    message(WARNING "Matlab libs not found")
endif ()